bin/tests/errors/sema/sema_err_ast_requires_string.swg
#global fileprivate

#ast 123 // swc-expected-error {{sema_err_ast_requires_string}}
